Version 2.5.0 (molinaro)
  * allow for easy re-emission of events without deserializing

Version 2.4.0 (vikramkadi)
  * New type long_string added to support strings bigger than
  * 65kb 

Version 2.3.1 (molinaro)
  * there was an encoding bug with string types

Version 2.3.0 (molinaro)
  * added array types

Version 2.2.0 (molinaro)
  * lwes_multi_emitter now supports randomly selecting groups to send to
  * lwes_multi_emitter now supports groups (so nesting)
  * send and receive stats are not collected and viewable

Version 2.1.2 (molinaro)
  * hopefully last change, eep18 format should return a top-level tuple

Version 2.1.1 (molinaro)
  * did the last version too fast missed some cases where json was used

Version 2.1.0 (molinaro)
  * proplists was actually wrong as ejson requires eep18 and as that my
    primary usecase for the json output, there are now 3 json decode formats
    json will return mochijson2 struct format, json_proplist will return
    the mochijson2 proplist formant, and json_eep18 will return the mochijson2
    eep18 format

Version 2.0.0 (molinaro)
  * switch to decoding as proplists, instead of struct's
  * moved some files from mochiweb into lwes, so I could skip the dependency
  * don't check return code of send so that it doesn't crash lwes if the
  network is down

Version 1.0.3 (molinaro)
  * missing dependency

Version 1.0.2 (molinaro)
  * need to increase recbuf size in order to journal everything

Version 1.0.1 (molinaro)
  * zero length strings should be allowed
  * for 'json' format, use mochijson2:decode for values

Version 1.0.0 (molinaro)
  * changed lwes:open to take different number of args, breaks backward
  compatibility
  * add 'dict' as a format for event attributes in deserialization
  * added journaller
  * added multi emitter
  * added 'json' as a format for event deserialization

Version 0.0.0 (molinaro)
  * Initial version