@@ -1,6 +1,6 @@
 Software Copyright License Agreement (BSD License)
 
-Copyright (c) 2010, OpenX Inc.
+Copyright (c) 2010-2014, OpenX Inc.
 All rights reserved.
 
 Redistribution and use of this software in source and binary forms,
